update buttons with bootstrap stylings

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -9,5 +9,5 @@
 
 <%= form_for @list do |f| %>
   <%= f.text_field :name %>
-  <%= f.submit %>
+  <%= f.button :submit, :class => 'btn btn-success' %>
 <% end %>
