--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,13 +1,17 @@
-<% if @list.errors.any? %>
-  <h4>Your list has some serious issues...</h4>
-  <ul>
-    <% @list.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end%>
-  </ul>
-<% end%>
-
-<%= form_for @list, :class => 'form-group' do |f| %>
-  <%= f.text_field :name, :class => 'from-control' %>
-  <%= f.button :submit, :class => 'btn btn-success' %>
+<%= form_for @list do |f| %>
+	<% if @list.errors.any? %>
+	  <h4>Your list has some serious issues...</h4>
+	  <ul>
+	    <% @list.errors.full_messages.each do |message| %>
+	      <li><%= message %></li>
+	    <% end%>
+	  </ul>
+	<% end%>
+	
+	<div class='input-group'>
+	  <%= f.text_field :name, :class => 'form-control' %>
+	  <span class="input-group-btn">
+		  <%= f.submit 'Add list', :class => 'btn btn-success' %>
+		</span>
+  </div>
 <% end %>
